SPHEREON-137 Barcode Microservice SDK
