# csharp-net45/src/Sphereon.SDK.Barcode/Model/DetectorJobResponse.cs
@@ -92,12 +92,12 @@ namespace Sphereon.SDK.Barcode.Model
         /// <summary>
         /// Initializes a new instance of the <see cref="DetectorJobResponse" /> class.
         /// </summary>
+        /// <param name="DetectorTasks">DetectorTasks.</param>
         /// <param name="BarcodeResults">The returned barcodes.</param>
         /// <param name="JobId">JobId.</param>
         /// <param name="Inputs">The original input files. Currently supported inputs are: tif files (required).</param>
-        /// <param name="ReaderTasks">ReaderTasks.</param>
         /// <param name="Job">Job.</param>
-        public DetectorJobResponse(List<Barcode> BarcodeResults = null, string JobId = null, List<string> Inputs = null, List<DetectorTask> ReaderTasks = null, DetectorJob Job = null)
+        public DetectorJobResponse(List<DetectorTask> DetectorTasks = null, List<Barcode> BarcodeResults = null, string JobId = null, List<string> Inputs = null, DetectorJob Job = null)
         {
             // to ensure "Inputs" is required (not null)
             if (Inputs == null)
@@ -108,12 +108,17 @@ namespace Sphereon.SDK.Barcode.Model
             {
                 this.Inputs = Inputs;
             }
+            this.DetectorTasks = DetectorTasks;
             this.BarcodeResults = BarcodeResults;
             this.JobId = JobId;
-            this.ReaderTasks = ReaderTasks;
             this.Job = Job;
         }
         
+        /// <summary>
+        /// Gets or Sets DetectorTasks
+        /// </summary>
+        [DataMember(Name="detectorTasks", EmitDefaultValue=false)]
+        public List<DetectorTask> DetectorTasks { get; set; }
         /// <summary>
         /// The returned barcodes
         /// </summary>
@@ -150,11 +155,6 @@ namespace Sphereon.SDK.Barcode.Model
         [DataMember(Name="updateTime", EmitDefaultValue=false)]
         public DateTime? UpdateTime { get; private set; }
         /// <summary>
-        /// Gets or Sets ReaderTasks
-        /// </summary>
-        [DataMember(Name="readerTasks", EmitDefaultValue=false)]
-        public List<DetectorTask> ReaderTasks { get; set; }
-        /// <summary>
         /// Gets or Sets Job
         /// </summary>
         [DataMember(Name="job", EmitDefaultValue=false)]
@@ -179,13 +179,13 @@ namespace Sphereon.SDK.Barcode.Model
         {
             var sb = new StringBuilder();
             sb.Append("class DetectorJobResponse {\n");
+            sb.Append("  DetectorTasks: ").Append(DetectorTasks).Append("\n");
             sb.Append("  BarcodeResults: ").Append(BarcodeResults).Append("\n");
             sb.Append("  CompletionTime: ").Append(CompletionTime).Append("\n");
             sb.Append("  JobId: ").Append(JobId).Append("\n");
             sb.Append("  CreationTime: ").Append(CreationTime).Append("\n");
             sb.Append("  Inputs: ").Append(Inputs).Append("\n");
             sb.Append("  UpdateTime: ").Append(UpdateTime).Append("\n");
-            sb.Append("  ReaderTasks: ").Append(ReaderTasks).Append("\n");
             sb.Append("  Job: ").Append(Job).Append("\n");
             sb.Append("  StatusMessage: ").Append(StatusMessage).Append("\n");
             sb.Append("  QueueTime: ").Append(QueueTime).Append("\n");
@@ -227,6 +227,11 @@ namespace Sphereon.SDK.Barcode.Model
 
             return 
                 (
+                    this.DetectorTasks == other.DetectorTasks ||
+                    this.DetectorTasks != null &&
+                    this.DetectorTasks.SequenceEqual(other.DetectorTasks)
+                ) && 
+                (
                     this.BarcodeResults == other.BarcodeResults ||
                     this.BarcodeResults != null &&
                     this.BarcodeResults.SequenceEqual(other.BarcodeResults)
@@ -255,11 +260,6 @@ namespace Sphereon.SDK.Barcode.Model
                     this.UpdateTime == other.UpdateTime ||
                     this.UpdateTime != null &&
                     this.UpdateTime.Equals(other.UpdateTime)
-                ) && 
-                (
-                    this.ReaderTasks == other.ReaderTasks ||
-                    this.ReaderTasks != null &&
-                    this.ReaderTasks.SequenceEqual(other.ReaderTasks)
                 ) && 
                 (
                     this.Job == other.Job ||
@@ -294,6 +294,8 @@ namespace Sphereon.SDK.Barcode.Model
             {
                 int hash = 41;
                 // Suitable nullity checks etc, of course :)
+                if (this.DetectorTasks != null)
+                    hash = hash * 59 + this.DetectorTasks.GetHashCode();
                 if (this.BarcodeResults != null)
                     hash = hash * 59 + this.BarcodeResults.GetHashCode();
                 if (this.CompletionTime != null)
@@ -306,8 +308,6 @@ namespace Sphereon.SDK.Barcode.Model
                     hash = hash * 59 + this.Inputs.GetHashCode();
                 if (this.UpdateTime != null)
                     hash = hash * 59 + this.UpdateTime.GetHashCode();
-                if (this.ReaderTasks != null)
-                    hash = hash * 59 + this.ReaderTasks.GetHashCode();
                 if (this.Job != null)
                     hash = hash * 59 + this.Job.GetHashCode();
                 if (this.StatusMessage != null)
