# swagger.json
@@ -56,12 +56,12 @@
         "summary": "Delete a job manually",
         "security": [{"oauth2schema": ["global"]}],
         "produces": ["application/json;charset=UTF-8"],
-        "description": "Delete the Detector job and all related files",
+        "description": "Delete the Detector Job and all related files",
         "operationId": "deleteJob",
         "responses": {
           "200": {
             "schema": {"$ref": "#/definitions/DetectorJobResponse"},
-            "description": "Detector job returned and Job is done or in error"
+            "description": "Detector job is deleted"
           },
           "400": {
             "schema": {"$ref": "#/definitions/ErrorResponse"},
@@ -86,7 +86,7 @@
         "summary": "Submit Detector job for processing",
         "security": [{"oauth2schema": ["global"]}],
         "produces": ["application/json;charset=UTF-8"],
-        "description": "Starts the barcode detection of the uploaded files, using the supplied settings associated with the job in the request body. You can only submit the job after a new Job is created with status INPUTS_UPLOADED or resubmit an existing Job with status ERROR. In all cases the job Id in the path must match the jobId in the request",
+        "description": "Starts the barcode detection of the uploaded files, using the supplied settings associated with the job in the request body. You can only submit the job after a new Job is created with status INPUTS_UPLOADED or resubmit an existing Job with status ERROR. In all cases the jobId in the path must match the jobId in the request",
         "operationId": "submitJob",
         "responses": {
           "200": {
@@ -137,18 +137,25 @@
       "properties": {
         "confidenceLevel": {
           "format": "double",
+          "description": "The confidence level of the barcode",
           "type": "number"
         },
         "pageNo": {
           "format": "int32",
+          "description": "The number of the page the barcode is on",
           "type": "integer"
         },
         "coordinates": {
+          "description": "The coordinates of the barcode. There are usually 2 coordinates, with an x and y value and an anchor.",
           "type": "array",
           "items": {"$ref": "#/definitions/BarcodeCoordinate"}
         },
-        "text": {"type": "string"},
+        "text": {
+          "description": "The text of the barcode",
+          "type": "string"
+        },
         "type": {
+          "description": "The type of the barcode",
           "type": "string",
           "enum": [
             "AZTEC",
@@ -247,6 +254,12 @@
         "status"
       ],
       "properties": {
+        "detectorTasks": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/DetectorTask"
+          }
+        },
         "barcodeResults": {
           "description": "The returned barcodes",
           "readOnly": true,
@@ -276,10 +289,6 @@
           "description": "The last update date/time of this job in ISO 8601 format",
           "readOnly": true,
           "type": "string"
-        },
-        "readerTasks": {
-          "type": "array",
-          "items": {"$ref": "#/definitions/DetectorTask"}
         },
         "job": {"$ref": "#/definitions/DetectorJob"},
         "statusMessage": {
